--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,18 +6,12 @@ http {
     server {
         listen 80;
         server_name 95.174.100.235;
-        return 301 https://$host$request_uri;
-    }
 
-    server {
-        listen 443 ssl;
-        server_name 95.174.100.235;
-
-        ssl_certificate /etc/nginx/certs/nginx.crt;
-        ssl_certificate_key /etc/nginx/certs/nginx.key; 
+        error_log /var/log/nginx/error.log debug;
+        access_log /var/log/nginx/access.log;
 
         location / {
-            proxy_pass http://fastapi:8000; 
+            proxy_pass http://fastapi:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
