update server name

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,7 +5,7 @@ events {
 http {
     server {
         listen 80;
-        server_name 95.174.100.235;
+        server_name leganyst.ru;
 
         error_log /var/log/nginx/error.log debug;
         access_log /var/log/nginx/access.log;
