added IP in nginx.conf and 443 port for https

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,7 +5,19 @@ events {
 http {
     server {
         listen 80;
-        server_name leganyst.ru;
+        server_name test.leganyst.ru 212.60.21.93;
+
+        location / {
+            return 301 https://$host$request_uri;
+        }
+    }
+
+    server {
+        listen 443 ssl;
+        server_name test.leganyst.ru 212.60.21.93;
+
+        ssl_certificate /etc/nginx/certs/test.leganyst.ru.crt;
+        ssl_certificate_key /etc/nginx/certs/test.leganyst.ru.key;
 
         error_log /var/log/nginx/error.log debug;
         access_log /var/log/nginx/access.log;
